[gd_scene load_steps=8 format=2]

[ext_resource path="res://source/game/interface/FadingOverlay.tscn" type="PackedScene" id=1]
[ext_resource path="res://source/menu/Credits.gd" type="Script" id=2]
[ext_resource path="res://graphics/images/ending/grass.png" type="Texture" id=3]
[ext_resource path="res://graphics/images/ending/sky.png" type="Texture" id=4]
[ext_resource path="res://graphics/images/ending/bird1.png" type="Texture" id=5]
[ext_resource path="res://graphics/images/ending/bird2.png" type="Texture" id=6]
[ext_resource path="res://graphics/images/ending/bird3.png" type="Texture" id=7]

[node name="Credits" type="Node2D"]
script = ExtResource( 2 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sky" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="SkyRect" type="TextureRect" parent="ParallaxBackground/Sky"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -66.0
margin_top = -31.0
margin_right = 540.0
margin_bottom = 233.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grass" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="GrassRect" type="TextureRect" parent="ParallaxBackground/Grass"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -83.0
margin_top = 109.0
margin_right = 563.0
margin_bottom = 202.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Life" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="bird1" type="TextureRect" parent="ParallaxBackground/Life"]
margin_left = 354.778
margin_top = 37.4468
margin_right = 394.778
margin_bottom = 77.4468
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bird2" type="TextureRect" parent="ParallaxBackground/Life"]
margin_left = 330.795
margin_top = 25.1802
margin_right = 370.795
margin_bottom = 65.1802
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bird3" type="TextureRect" parent="ParallaxBackground/Life"]
margin_left = 319.273
margin_top = 54.5183
margin_right = 359.273
margin_bottom = 94.5183
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 160, 90 )
current = true

[node name="FadingOverlay" parent="." instance=ExtResource( 1 )]
visible_by_default = true

[node name="CreditsStart" type="Node2D" parent="FadingOverlay"]
position = Vector2( 160, 90 )

[node name="CreditsEnd" type="Node2D" parent="FadingOverlay/CreditsStart"]
position = Vector2( 0, -280 )

[node name="CreditsContainer" type="Label" parent="FadingOverlay/CreditsStart"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.0
margin_right = 84.0
margin_bottom = 320.0
text = "The earth is saved





CREDITS

Arts BurntRobot Eric_ronin
Sound TheMooseman
Code Bitron, T4g1





Thank you for playing"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
